# cppm-homeworks

./: .gitignore
01/01/: out.txt  task1.cpp  task1.sln  task1.vcxproj
02/01/task1/: task1.cpp  task1.sln  task1.vcxproj
02/02/task2/: .gitignore  readme.md  task2.cpp  task2.sln  task2.vcxproj
02/03/task3/: task3.cpp  task3.sln  task3.vcxproj
03/01/task1/: task1.cpp  task1.sln  task1.vcxproj
03/02/task2/: task2.cpp  task2.sln  task2.vcxproj
04/01/task1/: task1.cpp  task1.sln  task1.vcxproj
04/02/task2/: task2.cpp  task2.sln  task2.vcxproj
05/01/task1/: task1.cpp  task1.sln  task1.vcxproj
05/02/task2/: task2.cpp  task2.sln  task2.vcxproj
05/03/task3/: task3.cpp  task3.sln  task3.vcxproj
06/01/task1/: Header.h  mathematic_func.cpp  task1.cpp  task1.sln  task1.vcxproj
06/02/task2/: Header.h  counter.cpp  counter.h  task2.cpp  task2.sln  task2.vcxproj
06/03/task3/: Isosceles_triangle.h  Parallelogram.h  Quadrangle.h  Rhomb.h  Square.cpp  Square.h  task3.cpp  task3.sln  task3.vcxproj
07/01/task1/: task1.cpp  task1.sln  task1.vcxproj
07/02/task2/: task2.cpp  task2.sln  task2.vcxproj
08/01/task1/: task1.cpp  task1.sln  task1.vcxproj
08/02/task2/: Equilateral_triangle.cpp  Equilateral_triangle.h  Exception.cpp  Exception.h  Figure.cpp  Figure.h  Isosceles_triangle.cpp  Isosceles_triangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangl.cpp  Rectangl.h  Rectangular_triangle.cpp  Rectangular_triangle.h  Rhomb.cpp  Rhomb.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  task2.cpp  task2.sln  task2.vcxproj
09/01/task1/: task1.cpp  task1.sln  task1.vcxproj
09/02/task2/: class_Fraction.cpp  class_Fraction.h  task2.cpp  task2.sln  task2.vcxproj
10/01/my_first_cmake_project/: CMakeLists.txt  Source.cpp
10/02/: CMakeLists.txt  Equilateral_triangle.h  Figure.cpp  Quadrangle.cpp  Rectangl.cpp  Rectangular_triangle.cpp  Rhomb.cpp  Triangle.h  task3.cpp
11/01/GreeterStaticLibrary/: GreeterStaticLibrary.sln
11/01/GreeterStaticLibrary/GreeterStaticLibrary/: GreeterStaticLibrary.cpp  GreeterStaticLibrary.h  GreeterStaticLibrary.vcxproj
11/01/task1/: task1.cpp  task1.vcxproj
11/02/LeaverDynamicLibrary/: LeaverDynamicLibrary.sln
11/02/task2/: task2.cpp  task2.vcxproj
11/03/: CMakeLists.txt  LeaverDynamicLibrary.cpp  LeaverDynamicLibrary.h  task3.cpp
11/04/task4/: task4.cpp  task4.vcxproj
11/05/: CMakeLists.txt  Figure.h  Isosceles_triangle.cpp  Rectangular_triangle.h  Triangle.cpp  main.cpp
_console_race_simulator/: Air_Transport.cpp  Air_Transport.h  All_Transport.h  Bot_skorohod.cpp  Bot_skorohod.h  CMakeLists.txt  Earth_Transport.cpp  Earth_Transport.h  Kentavr.cpp  Kentavr.h  Kover_Samolet.cpp  Kover_Samolet.h  Menu.cpp  Menu.h  Metla.cpp  Metla.h  Orel.cpp  Orel.h  Transport.cpp  Transport.h  Verblud.cpp  Verblud.h  Verblud_fast.cpp  Verblud_fast.h  main.cpp
console_race_simulator/: CMakeLists.txt  main.cpp
console_race_simulator/transport/: Air_Transport.cpp  Air_Transport.h  Bot_skorohod.cpp  Earth_Transport.cpp  Earth_Transport.h  Kentavr.cpp  Kentavr.h  Kover_Samolet.cpp  Kover_Samolet.h  Menu.cpp  Menu.h  Metla.cpp  Metla.h  Orel.cpp  Orel.h  Transport.cpp  Transport.h  Verblud.cpp  Verblud.h  Verblud_fast.cpp  Verblud_fast.h
(+18 files in other folders)
